@@ -1,33 +1,40 @@
 package com.example.demo.security;
 
-import com.example.demo.entity.CustomerProfile;
+import com.example.demo.model.CustomerProfile;
 import com.example.demo.repository.CustomerProfileRepository;
+
+import org.springframework.security.core.userdetails.*;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import java.util.Collections;
+
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
-    
-    private final CustomerProfileRepository customerProfileRepository;
 
-    public CustomUserDetailsService(CustomerProfileRepository customerProfileRepository) {
-        this.customerProfileRepository = customerProfileRepository;
+    private final CustomerProfileRepository repository;
+
+    public CustomUserDetailsService(CustomerProfileRepository repository) {
+        this.repository = repository;
     }
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        CustomerProfile customer = customerProfileRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+    public UserDetails loadUserByUsername(String email)
+            throws UsernameNotFoundException {
 
-        return User.builder()
-                .username(customer.getEmail())
-                .password("") // Password will be handled separately
-                .authorities(Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")))
+        CustomerProfile customer = repository.findByEmail(email)
+                .orElseThrow(() ->
+                        new UsernameNotFoundException("User not found"));
+
+        return User.withUsername(customer.getEmail())
+                .password("N/A") 
+                .authorities(List.of(new SimpleGrantedAuthority("ROLE_USER")))
                 .build();
     }
 }
+
+
+
+
+
+
